fixed the light mode button appearing too far down the screen on mobile screens.

--- a/src/components/LightModeButton/LightModeButton.css
+++ b/src/components/LightModeButton/LightModeButton.css
@@ -92,6 +92,5 @@
         background-color: var(--bg-color);
         z-index: 2;
         transition: 0.5s;
-        margin-top: var(--Header-height);
     }
 }
